--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-portfolio-template",
-  "version": "3.0",
+  "name": "web",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,8 +17,9 @@
     "next": "^14.1.4",
     "next-themes": "^0.2.0",
     "parse-numeric-range": "^1.3.0",
-    "postcss": "^8.4.13",
+    "postcss": "8.4.38",
     "react": "^18.2.0",
+    "react-calendly": "^4.3.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
